LOCAL/whoami/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: "public" 
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/dns01-edit-in-place: "true"
spec:
  rules:
  - host: whoami.local.slatsh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: whoami
            port:
              number: 80
  tls:
  - hosts:
    - whoami.local.slatsh.com
    secretName: whoami-secret
